# coopeartion_project

./: .gitignore  README.md  check_auth.py  gcp_search.py  gcp_service.py  generate.py  main.py  notion_service.py  pyproject.toml  redis_client.py  requirements.txt  telegram_handler.py
